tests/calico_testcases/example_policies/testcase1/networkpolicy-with-ns-selector-bad-path-test.yaml
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: bad-network-policy
  namespace: kube-system
spec:
  selector: has(app)
  namespaceSelector: unique-label == 'defaultNameSpace'
  types:
  - Ingress
  - Egress
