tests/calico_testcases/example_policies/testcase1/testcase1-different-protocol-nonequiv.yaml
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: testcase1-networkpolicy
  namespace: kube-system
spec:
  selector: tier == 'frontend'
  types:
  - Ingress
  - Egress
  ingress:
  - action: Allow
    protocol: UDP
    source:
      namespaceSelector: unique-label == 'defaultNameSpace'
  - action: Allow
    source:
      selector: app  == 'keepalived-watcher'
  egress:
  - action: Allow
    destination:
      selector: app  == 'keepalived-watcher'
