tests/calico_testcases/example_policies/testcase1/testcase1-empty-globalNetworkpolicy.yaml
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: testcase1-empty-globalNetworkpolicy
spec:
  types:
  - Ingress
  - Egress
