tests/calico_testcases/example_policies/testcase1/testcase1-empty-policy.yaml
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: testcase1-vacuous-networkpolicy
  namespace: default
spec:
  types:
  - Ingress
  - Egress

---
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: testcase1-empty-captured-pods
  namespace: default
spec:
  selector: tier == 'noExitsTier'
  types:
  - Ingress
  - Egress
  ingress:
  - action: Allow
  egress:
  - action: Allow

---
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: testcase1-empty-ingress-egress-rules
  namespace: default
spec:
  types:
  - Ingress
  - Egress
  ingress:
  - action: Allow
    source:
      selector: app  == 'no-exist-app'
  egress:
  - action: Allow
    destination:
      selector: app  == 'no-exist-app'
