tests/calico_testcases/example_policies/testcase1/testcase1-open-default.yaml
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: testcase1-networkpolicy-open-default-namespace
  namespace: default
spec:
  types:
  - Ingress
  - Egress
  ingress:
  - action: Allow
  egress:
  - action: Allow
