tests/calico_testcases/example_policies/testcase1/testcase1-scheme.yaml
namespaceList: ../../example_podlist/ns_list.json
podList: ../../example_podlist/pods_list.json

networkConfigList:
  - name: np_vacuous
    networkPolicyList:
      - testcase1-empty-policy.yaml
    resourceList: []
    expectedWarnings: 5

  - name: np_vacuous_resource_list
    resourceList:
      - testcase1-empty-policy.yaml
    expectedWarnings: 5

  - name: np_globalEmpty
    networkPolicyList:
      - testcase1-empty-globalNetworkpolicy.yaml
    expectedWarnings: 0

  - name: np_globalAllowAll
    networkPolicyList:
      - testcase1-open-all-globalNetworkpolicy.yaml
    expectedWarnings: 0

  - name: np_equiv_local_within_kube-system
    networkPolicyList:
      - testcase1-equiv-networkpolicy.yaml
    expectedWarnings: 0

  - name: np_equiv_local
    networkPolicyList:
      - testcase1-equiv-networkpolicy.yaml
      - testcase1-open-default.yaml
    expectedWarnings: 0

  - name: np_different_protocol_local
    networkPolicyList:
      - testcase1-different-protocol-nonequiv.yaml
      - testcase1-open-default.yaml
    expectedWarnings: 0

  - name: np_nonequiv_local
    networkPolicyList:
      - testcase1-nonequiv-networkpolicy.yaml
      - testcase1-open-default.yaml
    expectedWarnings: 0

  # following a new version of np_nonequiv_local but using a globalNetworkPolicy with ns_selector
  # to represent the np in testcase1-nonequiv-networkpolicy.yaml
  - name: np_nonequiv_local_2
    networkPolicyList:
      - testcase1-nonequiv-global-networkpolicy-with-ns-selector.yaml
      - testcase1-open-default.yaml
    expectedWarnings: 0

  - name: np_equiv_global
    networkPolicyList:
      - testcase1-equiv-global-networkpolicy.yaml
      - testcase1-open-default.yaml
    expectedWarnings: 0

  - name: np_various_policies
    networkPolicyList:
      - testcase1-equiv-global-networkpolicy.yaml
      - testcase1-open-default.yaml
      - testcase1-nonequiv-networkpolicy.yaml
      - testcase1-equiv-networkpolicy.yaml
    expectedWarnings: 0

  - name: np_for_disjointness
    networkPolicyList:
      - testcase1-for-disjointness.yaml
    expectedWarnings: 0

  - name: bad-np-test
    networkPolicyList:
      - networkpolicy-with-ns-selector-bad-path-test.yaml
    expectedError: 1

queries:
  - name: vacuous_policy
    vacuity:
      - np_globalEmpty
    expected: 0 # assuming default profiles generated by calico exist, thus allowing all by default

  - name: vacuous_policy_new
    vacuity:
      - np_globalAllowAll
    expectedOutput: ../../expected_output/vacuous-policy-new.txt
    expected: 1

  - name: vacuous_policy_new
    vacuity:
      - np_globalAllowAll
    outputConfiguration:
      fullExplanation: True
      outputFormat: yaml
    expectedOutput: ../../expected_output/vacuous-policy-new.yaml
    expected: 1

  - name: vacuous_policy_new
    vacuity:
      - np_globalAllowAll
    outputConfiguration:
      outputFormat: json
    expectedOutput: ../../expected_output/vacuous-policy-new.json
    expected: 1

  - name: non_vacous_policies
    vacuity:
      - np_equiv_local
      - np_nonequiv_local
      - np_equiv_global
      - np_equiv_local
      - np_different_protocol_local
    expected: 0

  - name: policies_not_empty
    emptiness:
      - np_equiv_local
      - np_nonequiv_local
      - np_equiv_global
      - np_equiv_local
      - np_different_protocol_local
    expected: 0

  - name: redundancy_all
    redundancy:
      - np_equiv_local
      - np_nonequiv_local
      - np_equiv_global
    expected: 3 # networkpolicy-open-default-namespace is redundant in all 3 configs, assuming profiles allow all by default

  - name: equiv_local_and_global
    equivalence:
      - np_equiv_local
      - np_equiv_global
    expected: 0

  - name: equiv_local_global_do_not_interfere
    pairwiseInterferes:
      - np_equiv_local
      - np_equiv_global
    expected: 0

  - name: nonequiv_localsNetworkPolicies
    equivalence:
      - np_equiv_local
      - np_nonequiv_local
    expected: 1

  - name: localsNetworkPolicies_contained_not_interfere
    interferes:
      - np_equiv_local
      - np_nonequiv_local
    expected: 1

  - name: localsNetworkPolicies_contain_does_interfere
    interferes:
      - np_nonequiv_local
      - np_equiv_local
    expected: 0

  - name: localsNetworkPolicies_contain_does_interfere_v2
    interferes:
      - np_nonequiv_local_2
      - np_equiv_local
    expected: 0

  - name: non_equiv_local_and_global_different_protocol
    equivalence:
      - np_equiv_global
      - np_different_protocol_local
    expected: 1

  - name: non_equiv_locals_different_protocol
    equivalence:
      - np_equiv_local
      - np_different_protocol_local
    expected: 1

  - name: non_equiv_locals_different_protocol_v2
    equivalence:
      - np_nonequiv_local_2
      - np_different_protocol_local
    expected: 1

  - name: disjointness_various_policies
    disjointness:
      - np_various_policies
    expected: 3

  - name: disjointness_various_policies_full_explanation
    disjointness:
      - np_various_policies
    outputConfiguration:
      fullExplanation: True
    expectedOutput: ../../expected_output/disjointness-various-policies-full-explanation.txt
    expected: 3

  - name: disjointness_various_policies_full_explanation_yaml
    disjointness:
      - np_various_policies
    outputConfiguration:
      fullExplanation: True
      outputFormat: yaml
    expectedOutput: ../../expected_output/disjointness-various-policies-full-explanation.yaml
    expected: 3

  - name: disjointness_various_policies_full_explanation_json
    disjointness:
      - np_various_policies
    outputConfiguration:
      fullExplanation: True
      outputFormat: json
    expectedOutput: ../../expected_output/disjointness-various-policies-full-explanation.json
    expected: 3


  - name: disjointness_holds
    disjointness:
    - np_for_disjointness
    expected: 2
